--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+.idea/
+*.prof
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +209,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+/u_python.pgm
+/v_python.pgm
+/profile.html
+/profile.json
+/fps/fps_sweep.csv
