--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pillow>=12.0.0",
     "scipy>=1.16.3",
     "PySide6>=6.6",
+    "scipy-stubs~=1.16.3",
 ]
 
 # Optional GPU extra
