--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mannetroll-interact"
+name = "mannetroll-cupystorm"
 version = "0.1.0"
 description = "2D Turbulence (SciPy + CuPy)"
 readme = "README.md"
@@ -23,14 +23,14 @@ dependencies = [
 gpu = ["cupy>=13.1"]
 
 [project.scripts]
-interact = "interact.turbo_main:main"
+cupystorm = "cupystorm.turbo_main:main"
 
 # Package discovery
 [tool.setuptools.packages.find]
-include = ["interact"]
+include = ["cupystorm"]
 
 [tool.setuptools.package-data]
-interact = ["*.icns"]
+cupystorm = ["*.icns"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
