--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,15 @@ authors = [
 ]
 
 dependencies = [
-    "cupy-cuda13x>=13.6.0 ; sys_platform != 'darwin'",
     "numpy>=2.3.5",
     "pillow>=12.0.0",
     "scipy>=1.16.3",
     "PySide6>=6.6",
 ]
+
+# Optional GPU extra
+[project.optional-dependencies]
+cuda = ["cupy-cuda13x>=13.6.0"]
 
 [project.scripts]
 cupystorm = "cupystorm.turbo_main:main"
