--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
 
 dependencies = [
     "numpy>=2.3.5",
+    "numba>=0.63.1,<1",
     "pillow>=12.0.0",
     "scipy>=1.16.3",
     "PySide6>=6.6",
